Updated the changes and moved all API endpoints to property file